--- a/privacy.html
+++ b/privacy.html
@@ -24,10 +24,10 @@
 
   <main class="content">
     <h1 data-i18n="privacy.title">Политика конфиденциальности</h1>
-    <p data-i18n="privacy.effective">Дата вступления в силу: 2025-08-09</p>
+    <p data-i18n="privacy.effective">Дата вступления в силу: 2025-08-01</p>
 
     <h2 data-i18n="p.intro.h2">1. Введение</h2>
-    <p data-i18n="p.intro.p">Настоящая Политика конфиденциальности описывает, как {APP_NAME} (далее — «Приложение») обрабатывает данные пользователей.</p>
+    <p data-i18n="p.intro.p">Настоящая Политика конфиденциальности описывает, как CheckList (далее — «Приложение») обрабатывает данные пользователей.</p>
 
     <h2 data-i18n="p.scope.h2">2. Собираемая информация</h2>
     <p data-i18n="p.scope.p">Приложение не собирает, не хранит, не передает и не обрабатывает персональные данные пользователей. Мы также не используем файлы cookie, аналитику, рекламные технологии и сторонние SDK/сервисы, способные собирать информацию о вас.</p>
@@ -42,7 +42,7 @@
     <p data-i18n="p.share.p">Мы не передаем ваши данные третьим лицам, поскольку данные не собираются.</p>
 
     <h2 data-i18n="p.rights.h2">6. Права пользователя</h2>
-    <p data-i18n="p.rights.p">Если у вас есть вопросы о конфиденциальности, вы можете связаться с нами по адресу {CONTACT_EMAIL}.</p>
+    <p data-i18n="p.rights.p">Если у вас есть вопросы о конфиденциальности, вы можете связаться с нами по адресу pvatulin.dev@gmail.com.</p>
 
     <h2 data-i18n="p.age.h2">7. Возрастные ограничения</h2>
     <p data-i18n="p.age.p">Приложение не имеет возрастных ограничений.</p>
@@ -51,7 +51,7 @@
     <p data-i18n="p.changes.p">Мы можем обновлять Политику конфиденциальности. Новая версия вступает в силу с момента публикации на этой странице.</p>
 
     <h2 data-i18n="p.contact.h2">9. Контакты</h2>
-    <p data-i18n="p.contact.p">По вопросам конфиденциальности свяжитесь с нами: {CONTACT_EMAIL}.</p>
+    <p data-i18n="p.contact.p">По вопросам конфиденциальности свяжитесь с нами: pvatulin-dev@gmail.com.</p>
 
     <p><a href="index.html" data-i18n="privacy.back">Вернуться на страницу приложения</a></p>
   </main>
