--- a/index.html
+++ b/index.html
@@ -68,19 +68,19 @@
 
     <section id="support" class="section">
       <h2 data-i18n="support.title">Поддержка</h2>
-      <p><span data-i18n="support.text">Вопросы и помощь:</span> <a href="mailto:{CONTACT_EMAIL}">{CONTACT_EMAIL}</a></p>
+      <p><span data-i18n="support.text">Вопросы и помощь:</span> <a href="mailto:{pvatulin.dev@gmail.com}">{pvatulin.dev@gmail.com}</a></p>
     </section>
   </main>
 
   <footer>
-    <small><span data-i18n="footer.copy">© 2025 {DEVELOPER_NAME}</span> · <a href="privacy.html" data-i18n="nav.privacy">Политика конфиденциальности</a></small>
+    <small><span data-i18n="footer.copy">© 2025 {Pavel Vatulin}</span> · <a href="privacy.html" data-i18n="nav.privacy">Политика конфиденциальности</a></small>
   </footer>
 
   
 <script>
   const i18n = {
     ru: {
-      'app.title':'{APP_NAME}',
+      'app.title':'CheckList',
       'app.lead':'Краткое описание приложения и ключевые преимущества.',
       'btn.download':'Скачать в App Store',
       'btn.features':'Особенности',
@@ -95,11 +95,11 @@
       'screens.note':'Замените изображения в папке assets на реальные скриншоты.',
       'support.title':'Поддержка',
       'support.text':'Вопросы и помощь:',
-      'footer.copy':'© 2025 {DEVELOPER_NAME}',
+      'footer.copy':'© 2025 {Pavel Vatulin}',
       'privacy.title':'Политика конфиденциальности',
-      'privacy.effective':'Дата вступления в силу: 2025-08-09',
+      'privacy.effective':'Дата вступления в силу: 2025-08-01',
       'p.intro.h2':'1. Введение',
-      'p.intro.p':'Настоящая Политика конфиденциальности описывает, как {APP_NAME} (далее — «Приложение») обрабатывает данные пользователей.',
+      'p.intro.p':'Настоящая Политика конфиденциальности описывает, как CheckList (далее — «Приложение») обрабатывает данные пользователей.',
       'p.scope.h2':'2. Собираемая информация',
       'p.scope.p':'Приложение не собирает, не хранит, не передает и не обрабатывает персональные данные пользователей. Мы также не используем файлы cookie, аналитику, рекламные технологии и сторонние SDK/сервисы, способные собирать информацию о вас.',
       'p.use.h2':'3. Использование информации',
@@ -109,17 +109,17 @@
       'p.share.h2':'5. Передача третьим лицам',
       'p.share.p':'Мы не передаем ваши данные третьим лицам, поскольку данные не собираются.',
       'p.rights.h2':'6. Права пользователя',
-      'p.rights.p':'Если у вас есть вопросы о конфиденциальности, вы можете связаться с нами по адресу {CONTACT_EMAIL}.',
+      'p.rights.p':'Если у вас есть вопросы о конфиденциальности, вы можете связаться с нами по адресу pvatulin.dev@gmail.com.',
       'p.age.h2':'7. Возрастные ограничения',
       'p.age.p':'Приложение не имеет возрастных ограничений.',
       'p.changes.h2':'8. Изменения политики',
       'p.changes.p':'Мы можем обновлять Политику конфиденциальности. Новая версия вступает в силу с момента публикации на этой странице.',
       'p.contact.h2':'9. Контакты',
-      'p.contact.p':'По вопросам конфиденциальности свяжитесь с нами: {CONTACT_EMAIL}.',
+      'p.contact.p':'По вопросам конфиденциальности свяжитесь с нами: pvatulin.dev@gmail.com.',
       'privacy.back':'Вернуться на страницу приложения'
     },
     en: {
-      'app.title':'{APP_NAME}',
+      'app.title':'CheckList',
       'app.lead':'A brief description of the app and its key benefits.',
       'btn.download':'Download on the App Store',
       'btn.features':'Features',
@@ -134,11 +134,11 @@
       'screens.note':'Replace the images in the assets folder with your actual screenshots.',
       'support.title':'Support',
       'support.text':'Contact us:',
-      'footer.copy':'© 2025 {DEVELOPER_NAME}',
+      'footer.copy':'© 2025 {Pavel Vatulin}',
       'privacy.title':'Privacy Policy',
-      'privacy.effective':'Effective date: 2025-08-09',
+      'privacy.effective':'Effective date: 2025-08-01',
       'p.intro.h2':'1. Introduction',
-      'p.intro.p':'This Privacy Policy describes how {APP_NAME} (the “App”) processes user data.',
+      'p.intro.p':'This Privacy Policy describes how CheckList (the “App”) processes user data.',
       'p.scope.h2':'2. Information We Collect',
       'p.scope.p':'The App does not collect, store, transmit, or process any personal data. We also do not use cookies, analytics, advertising technologies, or third-party SDKs/services that could collect information about you.',
       'p.use.h2':'3. How We Use Information',
@@ -148,13 +148,13 @@
       'p.share.h2':'5. Sharing with Third Parties',
       'p.share.p':'We do not share your data with third parties, as no data is collected.',
       'p.rights.h2':'6. Your Rights',
-      'p.rights.p':'If you have privacy questions, you can contact us at {CONTACT_EMAIL}.',
+      'p.rights.p':'If you have privacy questions, you can contact us at pvatulin.dev@gmail.com.',
       'p.age.h2':'7. Age Restrictions',
       'p.age.p':'The App has no age restrictions.',
       'p.changes.h2':'8. Changes to This Policy',
       'p.changes.p':'We may update this Policy from time to time. The new version becomes effective when posted on this page.',
       'p.contact.h2':'9. Contact',
-      'p.contact.p':'For privacy inquiries, please contact: {CONTACT_EMAIL}.',
+      'p.contact.p':'For privacy inquiries, please contact: pvatulin.dev@gmail.com.',
       'privacy.back':'Back to the app page'
     }
   };
