--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title data-i18n="app.title">{APP_NAME}</title>
+  <title data-i18n="app.title">CheckList</title>
   <meta name="description" content="App landing page with RU/EN switch (no reload).">
   <style>
   body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Arial, sans-serif; margin:0; color:#0f172a; }
@@ -68,12 +68,13 @@
 
     <section id="support" class="section">
       <h2 data-i18n="support.title">Поддержка</h2>
-      <p><span data-i18n="support.text">Вопросы и помощь:</span> <a href="mailto:{pvatulin.dev@gmail.com}">{pvatulin.dev@gmail.com}</a></p>
+      <p><span data-i18n="support.text">Вопросы и помощь:</span> <a href="mailto:pvatulin.dev@gmail.com">pvatulin.dev@gmail.com</a></p>
+      <p data-i18n="support.faq">Часто задаваемые вопросы (FAQ) можно разместить на этой странице или вынести в отдельный файл.</p>
     </section>
   </main>
 
   <footer>
-    <small><span data-i18n="footer.copy">© 2025 {Pavel Vatulin}</span> · <a href="privacy.html" data-i18n="nav.privacy">Политика конфиденциальности</a></small>
+    <small><span data-i18n="footer.copy">© 2025 Pavel Vatulin</span> · <a href="privacy.html" data-i18n="nav.privacy">Политика конфиденциальности</a></small>
   </footer>
 
   
@@ -95,7 +96,8 @@
       'screens.note':'Замените изображения в папке assets на реальные скриншоты.',
       'support.title':'Поддержка',
       'support.text':'Вопросы и помощь:',
-      'footer.copy':'© 2025 {Pavel Vatulin}',
+      'support.faq':'Часто задаваемые вопросы (FAQ) можно разместить на этой странице или вынести в отдельный файл.',
+      'footer.copy':'© 2025 Pavel Vatulin',
       'privacy.title':'Политика конфиденциальности',
       'privacy.effective':'Дата вступления в силу: 2025-08-01',
       'p.intro.h2':'1. Введение',
@@ -125,6 +127,7 @@
       'btn.features':'Features',
       'nav.screens':'Screenshots',
       'nav.support':'Support',
+      'support.faq':'FAQ may be placed here.',
       'nav.privacy':'Privacy Policy',
       'features.title':'Features',
       'feat.1':'Feature 1. Short description.',
@@ -134,7 +137,7 @@
       'screens.note':'Replace the images in the assets folder with your actual screenshots.',
       'support.title':'Support',
       'support.text':'Contact us:',
-      'footer.copy':'© 2025 {Pavel Vatulin}',
+      'footer.copy':'© 2025 Pavel Vatulin',
       'privacy.title':'Privacy Policy',
       'privacy.effective':'Effective date: 2025-08-01',
       'p.intro.h2':'1. Introduction',
