--- a/privacy.html
+++ b/privacy.html
@@ -48,7 +48,7 @@
     <p data-i18n="p.age.p">Приложение не имеет возрастных ограничений.</p>
 
     <h2 data-i18n="p.changes.h2">8. Изменения политики</h2>
-    <p data-i18n="p.changes.p">Мы можем обновлять Политику конфиденциальности. Новая версия вступает в силу с момента публикации на этой странице.</p>
+    <p data-i18n="p.changes.p">Мы можем обновлять Политику конфиденциальности. Новая версия вступает в силу с момента публикации на странице приложения.</p>
 
     <h2 data-i18n="p.contact.h2">9. Контакты</h2>
     <p data-i18n="p.contact.p">По вопросам конфиденциальности свяжитесь с нами: pvatulin.dev@gmail.com.</p>
@@ -93,7 +93,7 @@
       'p.age.h2':'7. Возрастные ограничения',
       'p.age.p':'Приложение не имеет возрастных ограничений.',
       'p.changes.h2':'8. Изменения политики',
-      'p.changes.p':'Мы можем обновлять Политику конфиденциальности. Новая версия вступает в силу с момента публикации на этой странице.',
+      'p.changes.p':'Мы можем обновлять Политику конфиденциальности. Новая версия вступает в силу с момента публикации на странице приложения.',
       'p.contact.h2':'9. Контакты',
       'p.contact.p':'По вопросам конфиденциальности свяжитесь с нами: pvatulin.dev@gmail.com.',
       'privacy.back':'Вернуться на страницу приложения'
@@ -128,11 +128,11 @@
       'p.share.h2':'5. Sharing with Third Parties',
       'p.share.p':'We do not share your data with third parties, as no data is collected.',
       'p.rights.h2':'6. Your Rights',
-      'p.rights.p':'If you have privacy questions, you can contact us at {CONTACT_EMAIL}.',
+      'p.rights.p':'If you have privacy questions, you can contact us at pvatulin.dev@gmail.com.',
       'p.age.h2':'7. Age Restrictions',
       'p.age.p':'The App has no age restrictions.',
       'p.changes.h2':'8. Changes to This Policy',
-      'p.changes.p':'We may update this Policy from time to time. The new version becomes effective when posted on this page.',
+      'p.changes.p':'We may update this Policy from time to time. The new version becomes effective when posted on app page.',
       'p.contact.h2':'9. Contact',
       'p.contact.p':'For privacy inquiries, please contact: pvatulin.dev@gmail.com.',
       'privacy.back':'Back to the app page'
