--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <button id="btn-ru" onclick="setLang('ru')">RU</button>
       <button id="btn-en" onclick="setLang('en')">EN</button>
     </div>
-    <img src="assets/CheckListIcon_lblue.png" alt="App icon" width="96" height="96" style="border-radius:22%; border:1px solid #e2e8f0;">
+    <img src="assets/app-icon.png" alt="App icon" width="96" height="96" style="border-radius:22%; border:1px solid #e2e8f0;">
     <h1 data-i18n="app.title">CheckList</h1>
     <p class="lead" data-i18n="app.lead">Краткое описание приложения и ключевые преимущества.</p>
     <div>
