--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
       <button id="btn-ru" onclick="setLang('ru')">RU</button>
       <button id="btn-en" onclick="setLang('en')">EN</button>
     </div>
-    <img src="assets/app-icon.png" alt="App icon" width="96" height="96" style="border-radius:22%; border:1px solid #e2e8f0;">
+    <img src="assets/CheckListIcon.png" alt="App icon" width="96" height="96" style="border-radius:22%; border:1px solid #e2e8f0;">
     <h1 data-i18n="app.title">CheckList</h1>
-    <p class="lead" data-i18n="app.lead">Краткое описание приложения и ключевые преимущества.</p>
+    <p class="lead" data-i18n="app.lead">Легкое и функциональное приложение - чеклист списков покупок, вещей в дорогу и любых задач. Ключевое преимещество программы - это предустановленные списки в нескольких категортях, например продукты и вещи в дорогу. Краткое описание приложения и ключевые преимущества.</p>
     <div>
       <a class="btn primary" href="https://apps.apple.com/app/idXXXXXXXXX" data-i18n="btn.download">Скачать в App Store</a>
       <a class="btn" href="#features" data-i18n="btn.features">Особенности</a>
@@ -68,8 +68,8 @@
 
     <section id="support" class="section">
       <h2 data-i18n="support.title">Поддержка</h2>
-      <p><span data-i18n="support.text">Вопросы и помощь:</span> <a href="mailto:pvatulin.dev@gmail.com">pvatulin.dev@gmail.com</a></p>
       <p data-i18n="support.faq">Часто задаваемые вопросы (FAQ) можно разместить на этой странице или вынести в отдельный файл.</p>
+      <p><span data-i18n="support.text">Вопросы и помощь:</span> <a href="mailto:pvatulin.dev@gmail.com">pvatulin.dev@gmail.com</a></p>
     </section>
   </main>
 
@@ -95,8 +95,8 @@
       'screens.title':'Скриншоты',
       'screens.note':'Замените изображения в папке assets на реальные скриншоты.',
       'support.title':'Поддержка',
+      'support.faq':'Часто задаваемые вопросы (FAQ) будут размещены на этой странице.',
       'support.text':'Вопросы и помощь:',
-      'support.faq':'Часто задаваемые вопросы (FAQ) можно разместить на этой странице или вынести в отдельный файл.',
       'footer.copy':'© 2025 Pavel Vatulin',
       'privacy.title':'Политика конфиденциальности',
       'privacy.effective':'Дата вступления в силу: 2025-08-01',
@@ -126,8 +126,8 @@
       'btn.download':'Download on the App Store',
       'btn.features':'Features',
       'nav.screens':'Screenshots',
+      'support.faq':'FAQ will be placed here.',
       'nav.support':'Support',
-      'support.faq':'FAQ may be placed here.',
       'nav.privacy':'Privacy Policy',
       'features.title':'Features',
       'feat.1':'Feature 1. Short description.',
