--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   const i18n = {
     ru: {
       'app.title':'CheckList',
-      'app.lead':'Краткое описание приложения и ключевые преимущества.',
+      'app.lead':'Легкое и функциональное приложение - чеклист списков покупок, вещей в дорогу и любых задач. Ключевое преимещество программы - это предустановленные списки в нескольких категортях, например продукты и вещи в дорогу. Краткое описание приложения и ключевые преимущества.',
       'btn.download':'Скачать в App Store',
       'btn.features':'Особенности',
       'nav.screens':'Скриншоты',
